fix svg wrap

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -145,6 +145,7 @@
 	width: 100%;
 	height: 0;
 	padding-bottom: 20%;
+	z-index: -1;
 }
 .objects__svg {
 	position: absolute;
@@ -420,6 +421,7 @@
 	width: 90%;
 	height: 0;
 	padding-bottom: 20%;
+	z-index: -1;
 }
 .company__svg {
 	position: absolute;
@@ -505,6 +507,7 @@
 	width: 33%;
 	height: 0;
 	padding-bottom: 11%;
+	z-index: -1;
 }
 .reputation__svg {
 	position: absolute;
@@ -623,9 +626,6 @@
 	.objects {
 		margin-bottom: 15vh;
 	}
-	.slideArt__head {
-		margin-top: 8%;
-	}
 }
 @media only screen and (max-width: 760px) {
 	/*----- Reputation -----*/
@@ -634,6 +634,7 @@
 		margin: 3% 0;
 	}
 	/*----- /Reputation -----*/
+	
 }
 @media only screen and (max-width: 650px) {
 	.slideHead {
